<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_settings"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_bold"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/view"
                    android:layout_below="@id/tv_chapter"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="@color/light_purple"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_sounds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_purple"
                        android:padding="4dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sounds"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <CheckBox
                            android:id="@+id/cb_sounds_settings"
                            android:button="@null"
                            android:checked="false"
                            android:drawableEnd="@drawable/checkbox_selector"
                            android:focusable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_purple"
                        android:layout_below="@id/cl_sounds"
                        android:padding="4dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <CheckBox
                            android:id="@+id/cb_notifications_settings"
                            android:button="@null"
                            android:checked="false"
                            android:drawableEnd="@drawable/checkbox_selector"
                            android:focusable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_write_to_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_purple"
                        android:layout_below="@id/cl_notification"
                        android:layout_marginTop="20dp"
                        android:padding="4dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/write_to_us"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_navigate_next_white_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/cl_terms_and_conditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_purple"
                        android:layout_below="@id/cl_write_to_us"
                        android:layout_marginTop="20dp"
                        android:padding="4dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t_amp_c_privacy"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_navigate_next_white_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>




</RelativeLayout>